--- a/index.html
+++ b/index.html
@@ -3,127 +3,127 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Diff Count AI 자동화 프로젝트</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
+  <title>Diff Count AI 포트폴리오</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Outfit:wght@300;400;600&display=swap" rel="stylesheet" />
   <style>
+    * { box-sizing: border-box; }
     body {
       margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(to bottom, #e0eafc, #cfdef3);
+      font-family: 'Outfit', sans-serif;
+      background: #f2f4f9;
       color: #333;
     }
     header {
-      background: linear-gradient(to right, #1e3c72, #2a5298);
+      background: url('https://images.unsplash.com/photo-1581091870622-2c8b832d8a94?auto=format&fit=crop&w=1650&q=80') center/cover no-repeat;
       color: white;
-      padding: 3rem 1rem;
+      padding: 8rem 1rem;
       text-align: center;
+      position: relative;
+    }
+    header::after {
+      content: '';
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background-color: rgba(0,0,0,0.55);
+      z-index: 0;
+    }
+    header h1, header p {
+      position: relative;
+      z-index: 1;
     }
     header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
+      font-family: 'Playfair Display', serif;
+      font-size: 4.5rem;
+      letter-spacing: 1px;
+      margin-bottom: 1rem;
     }
     header p {
-      font-size: 1.2rem;
-      opacity: 0.85;
+      font-size: 1.5rem;
+      font-weight: 300;
+      opacity: 0.95;
     }
-    .container {
-      max-width: 960px;
-      margin: 2rem auto;
-      padding: 0 1.5rem;
-    }
-    .card {
-      background: white;
-      border-radius: 1rem;
+    .section {
+      max-width: 1000px;
+      margin: 3rem auto;
       padding: 2rem;
-      margin-bottom: 2rem;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s ease;
-    }
-    .card:hover {
-      transform: translateY(-5px);
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.06);
     }
     h2 {
-      color: #2a5298;
-      margin-top: 0;
+      color: #1e3c72;
+      font-family: 'Playfair Display', serif;
+      font-size: 2rem;
+      margin-bottom: 1rem;
     }
-    ul {
-      padding-left: 1.2rem;
+    .section img {
+      max-width: 100%;
+      border-radius: 8px;
+      margin: 1rem 0;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
+    ul { padding-left: 1.2rem; }
     a {
-      color: #2a5298;
+      color: #1e3c72;
       text-decoration: none;
-      font-weight: 500;
     }
     a:hover {
       text-decoration: underline;
     }
     footer {
       text-align: center;
-      padding: 1.5rem;
-      font-size: 0.9rem;
+      padding: 2rem;
       color: #666;
-      background-color: #f4f6fa;
-      margin-top: 3rem;
+      font-size: 0.9rem;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Diff Count AI 자동화 프로젝트</h1>
-    <p>딥러닝 기반 백혈구 감별계수 기술 리서치</p>
+    <h1>Diff Count AI</h1>
+    <p>딥러닝 기반 백혈구 감별계수 자동화 프로젝트</p>
   </header>
 
-  <div class="container">
-    <div class="card">
-      <h2>✨ 프로젝트 개요</h2>
-      <p>본 프로젝트는 임상병리학의 핵심 작업 중 하나인 백혈구 감별계수(Diff Count)를 딥러닝 기반으로 자동화하기 위한 기술을 탐구하고 정리한 리서치입니다.</p>
-    </div>
+  <section class="section">
+    <h2>✨ 프로젝트 개요</h2>
+    <p>이 프로젝트는 혈액 도말 슬라이드 이미지로부터 백혈구를 분류하고 계수하는 작업을 딥러닝(CNN, YOLO, U-Net 등) 기반으로 자동화하는 방법을 탐색합니다.</p>
+    <img src="https://www.researchgate.net/profile/Safwan-Khan-5/publication/343925227/figure/fig1/AS:925181274947588@1598893371297/Block-diagram-of-proposed-system.png" alt="AI 분석 흐름도">
+  </section>
 
-    <div class="card">
-      <h2>⚖️ 사용 기술</h2>
-      <ul>
-        <li>CNN 기반 이미지 분류</li>
-        <li>YOLO / Faster R-CNN 객체 탐지</li>
-        <li>U-Net 기반 세포 분할</li>
-      </ul>
-    </div>
+  <section class="section">
+    <h2>🌐 사용된 데이터셋</h2>
+    <ul>
+      <li><a href="https://www.kaggle.com/datasets/paultimothymooney/blood-cells" target="_blank">Blood Cell Images - Kaggle</a></li>
+      <li><a href="https://data.mendeley.com/datasets/snkd93bnjr/1" target="_blank">Mendeley WBC Dataset</a></li>
+    </ul>
+    <img src="https://i.imgur.com/Jt6zslV.png" alt="백혈구 이미지 예시">
+  </section>
 
-    <div class="card">
-      <h2>🔍 주요 데이터셋</h2>
-      <ul>
-        <li><a href="https://www.kaggle.com/datasets/paultimothymooney/blood-cells" target="_blank">Kaggle: Blood Cell Images</a></li>
-        <li><a href="https://data.mendeley.com/datasets/snkd93bnjr/1" target="_blank">Mendeley Blood Cell Dataset</a></li>
-        <li><a href="https://github.com/Chula-PIC-Lab/Chula-RBC-12-Dataset" target="_blank">Chula-RBC-12 Dataset</a></li>
-      </ul>
-    </div>
+  <section class="section">
+    <h2>📊 모델 성능 시각화</h2>
+    <img src="https://i.imgur.com/FjlEvDc.png" alt="정확도 그래프">
+    <img src="https://i.imgur.com/KewWPCe.png" alt="Confusion Matrix">
+  </section>
 
-    <div class="card">
-      <h2>📄 참고 논문</h2>
-      <ul>
-        <li>Deep Learning for Classification of White Blood Cells (2018)</li>
-        <li>Automatic WBC Detection using YOLOv4 (2022)</li>
-        <li>U-Net: Biomedical Image Segmentation (2015)</li>
-      </ul>
-    </div>
+  <section class="section">
+    <h2>🚀 사용 기술 스택</h2>
+    <ul>
+      <li>TensorFlow (CNN 모델 구현)</li>
+      <li>image_dataset_from_directory 기반 데이터 로딩</li>
+      <li>Matplotlib, Seaborn으로 결과 시각화</li>
+    </ul>
+  </section>
 
-    <div class="card">
-      <h2>🚀 상용화 기술 사례</h2>
-      <ul>
-        <li><strong>CellaVision</strong> – 글로벌 WBC 자동화 분석 시스템</li>
-        <li><strong>노을 miLab BCM</strong> – 한국의 소형 현장 진단 AI 플랫폼</li>
-        <li><strong>Sysmex</strong> – 디지털 혈액 분석기술 리더</li>
-      </ul>
-    </div>
-
-    <div class="card">
-      <h2>🚪 GitHub 링크</h2>
-      <p><a href="https://github.com/your-username/diff-count-ai" target="_blank">프로젝트 GitHub 보기</a></p>
-    </div>
-  </div>
+  <section class="section">
+    <h2>👨‍🎓 프로젝트 정보</h2>
+    <p><strong>이름:</strong> 시우<br>
+       <strong>전공:</strong> 동서대학교 임상병리학과<br>
+       <strong>참여 목적:</strong> 비전공자로서 AI 기반 임상병리 기술의 가능성 탐색</p>
+  </section>
 
   <footer>
-    © 2025 시우 | Clinical Pathology & AI Research
+    © 2025 Siwoo | Clinical Pathology x Deep Learning<br>
+    본 페이지는 GitHub Pages를 통해 배포되었습니다.
   </footer>
 </body>
 </html>
-
