--- a/index.html
+++ b/index.html
@@ -1,117 +1,104 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>딥러닝 기반 백혈구 감별계수</title>
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;800&display=swap" rel="stylesheet">
+  <title>WBC Diff Count AI Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700&display=swap" rel="stylesheet" />
   <style>
     body {
       margin: 0;
       font-family: 'Outfit', sans-serif;
-      background-color: #f7f9fc;
+      background-color: #f7fcfc;
       color: #333;
+      line-height: 1.6;
     }
+
     header {
-      background-color: #e6f7f7;
-      padding: 3rem 2rem;
+      background: linear-gradient(to right, #89f7fe, #66a6ff);
+      color: white;
+      padding: 3rem 1.5rem;
       text-align: center;
     }
+
     header h1 {
       font-size: 2.5rem;
-      font-weight: 800;
-      color: #007e8a;
-      margin: 0;
+      margin-bottom: 0.5rem;
     }
-    header p {
-      font-size: 1.2rem;
-      color: #444;
-      margin-top: 0.5rem;
-    }
+
     section {
-      padding: 2rem 3rem;
-      max-width: 1000px;
-      margin: auto;
+      max-width: 960px;
+      margin: 2rem auto;
+      padding: 1rem 2rem;
+      background: white;
+      border-radius: 1rem;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
     }
+
     section h2 {
-      color: #007e8a;
-      font-size: 1.8rem;
+      color: #157b92;
+      font-size: 1.75rem;
       margin-bottom: 1rem;
     }
+
     section p {
-      line-height: 1.8;
+      margin-bottom: 1rem;
     }
-    .image-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 1rem;
-      margin-top: 2rem;
-    }
-    .image-grid img {
-      width: 100%;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    }
-    .chart {
-      margin-top: 2rem;
-      background-color: #ffffff;
-      padding: 1rem;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+
+    footer {
+      text-align: center;
+      padding: 2rem;
+      font-size: 0.9rem;
+      color: #888;
     }
   </style>
 </head>
+
 <body>
   <header>
-    <h1>딥러닝 기반 백혈구 감별계수</h1>
-    <p>Diff Count를 자동화하여 진단의 정확성과 효율성을 높이다</p>
+    <h1>백혈구 감별계수 자동화<br>AI 기반 프로젝트 포트폴리오</h1>
+    <p>딥러닝 기술을 활용한 WBC 이미지 분류 및 성능 평가</p>
   </header>
 
   <section>
-    <h2>프로젝트 개요</h2>
-    <p>
-      본 프로젝트는 딥러닝(CNN 기반)을 활용하여 백혈구를 자동으로 분류하는 시스템을 개발하고자 합니다. 전통적으로 백혈구 감별계수는 숙련된 전문가가 현미경으로 일일이 관찰해야 했지만, 이 기술은 이를 자동화하여 진단 속도 및 정확성을 크게 향상시킵니다.
-    </p>
+    <h2>1. 프로젝트 개요</h2>
+    <p>본 프로젝트는 백혈구 감별계수(Differential Count)를 딥러닝 기반으로 자동화하는 것을 목표로 합니다. 인공지능을 활용해 혈액 도말 슬라이드 이미지를 분석하고, 백혈구의 종류를 정확히 분류합니다.</p>
   </section>
 
   <section>
-    <h2>사용한 데이터셋</h2>
-    <p>
-      Kaggle의 Blood Cell Images Dataset을 활용하였으며, 이 데이터셋은 Neutrophil, Lymphocyte, Monocyte, Eosinophil 등으로 구성된 이미지들로 구성되어 있습니다. 훈련/검증/테스트 데이터셋으로 나누어 사용하였습니다.
-    </p>
+    <h2>2. 기술적 배경</h2>
+    <p>기존의 감별계수는 수작업으로 진행되어 많은 시간과 숙련도를 요구합니다. 본 연구는 CNN 기반의 이미지 분류 모델을 통해 이 과정을 자동화하고, 정확성을 향상시키는 방안을 제시합니다.</p>
   </section>
 
   <section>
-    <h2>딥러닝 모델 구조</h2>
-    <p>
-      모델은 3개의 Conv2D + MaxPooling 레이어와 Dropout이 포함된 CNN 구조로, 마지막에는 Softmax를 사용하는 다중 클래스 분류입니다. 학습률은 Adam 옵티마이저로 조절되며, 20 Epoch 기준으로 훈련하였습니다.
-    </p>
+    <h2>3. 데이터셋 설명</h2>
+    <p>Kaggle의 Blood Cell Images 데이터셋을 활용하여 총 12,000여 장의 훈련 이미지와 3,000장의 테스트 이미지를 사용하였습니다. 클래스는 호중구, 호산구, 림프구, 단구로 구성되어 있습니다.</p>
   </section>
 
   <section>
-    <h2>정확도 및 성능</h2>
-    <div class="chart">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Bar_chart_example.svg/600px-Bar_chart_example.svg.png" alt="성능 그래프" style="width:100%; border-radius:8px;" />
-    </div>
-    <p>
-      전체 테스트 정확도는 약 91%이며, 일부 세포는 높은 정밀도와 재현율을 보였습니다. 아래는 성능 분석 결과를 시각화한 그래프입니다.
-    </p>
+    <h2>4. 모델 구조</h2>
+    <p>3층 CNN 아키텍처를 기반으로 하며, 각 층은 Conv2D, MaxPooling, Dropout 레이어로 구성되어 있습니다. 출력층은 Softmax를 사용하여 4가지 백혈구 유형을 분류합니다.</p>
   </section>
 
   <section>
-    <h2>이미지 예시</h2>
-    <div class="image-grid">
-      <img src="/mnt/data/36cd5e23-cd67-48a4-bdb6-a450623105ca.png" alt="연구원 실험 이미지">
-      <img src="/mnt/data/a7e29058-95ab-44fc-8aed-27a0fb44264c.png" alt="백혈구와 적혈구 CG">
-      <img src="/mnt/data/fd8df643-d40b-4835-b179-31f101415ae1.png" alt="백혈구 현미경 이미지">
-    </div>
+    <h2>5. 학습 및 성능 평가</h2>
+    <p>학습 정확도는 97%, 검증 정확도는 93%에 도달하였습니다. 평가 지표로는 정확도, 정밀도, 재현율, F1-score, Confusion Matrix를 활용하였으며, 실사용 가능한 수준의 신뢰도를 확보하였습니다.</p>
   </section>
 
   <section>
-    <h2>결론 및 기대 효과</h2>
-    <p>
-      본 기술은 혈액 질환 조기진단, 검사 자동화, 인력 부담 감소, 일관된 결과 제공 등의 장점을 지닙니다. 향후에는 소형화된 장비와 연동하여 원격 진단 분야에도 적용 가능성이 높습니다.
-    </p>
+    <h2>6. 결과 및 결론</h2>
+    <p>본 프로젝트는 백혈구 감별계수의 자동화를 통해 임상병리사의 업무 효율성을 높이고, 오진률을 줄일 수 있는 가능성을 제시하였습니다. 향후에는 비정형 세포 감별 및 진단 정확도 향상을 위한 추가 연구가 필요합니다.</p>
   </section>
+
+  <section>
+    <h2>7. 향후 발전 방향</h2>
+    <p>딥러닝 최신 모델(ViT, YOLOv8 등)의 도입, 비정상 세포를 포함한 데이터 확보, 현장형 장비와의 통합을 통한 임상 적용이 주요 방향입니다.</p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 시우의 AI 포트폴리오</p>
+  </footer>
 </body>
+
 </html>
